<resources>
    <string name="app_name">Ejercicio1</string>
    <string name="titulo1">Test</string>
    <string name="tnombre">Nombre(s)</string>
    <string name="cnombre">Escribe tu nombre</string>
    <string name="tapellido">Apellido(s)</string>
    <string name="capellido">Escribe tu(s) apellido(s)</string>
    <string name="tnumcuenta">Numero de cuenta</string>
    <string name="cnumcuenta">Escribe tu numero de cuenta</string>
    <string name="tcorreo">Correo electronico</string>
    <string name="ccorreo">ejemplo@ejemplo.com</string>
    <string name="tgenero">Genero</string>
    <string name="tgenero1">Masculino</string>
    <string name="tgenero2">Femenino</string>
    <string name="tfacultad">Facultad</string>
    <string name="tfacultad1">Facultad de Arquitectura</string>
    <string name="tfacultad2">Facultad de Contaduría</string>
    <string name="tfacultad3">Facultad de Ingeniería</string>
    <string name="tfacultad4">Facultad de Medicina</string>
    <string name="tfacultad5">Facultad de Psicología</string>
    <string name="tEnviar">Enviar</string>
    <string name="mensajeGenero">Selecciona un genero</string>
    <string name="mensajeFac">Selecciona una Facultad</string>
    <string name="toastIni">Alumno Guardado.</string>
    <string name="toastNombre">" Nombre(s): "</string>
    <string name="toastApellido">" Apellido(s): "</string>
    <string name="toastNumC">" Numero de Cuenta: "</string>
    <string name="toastCorreo">" Correo: "</string>
    <string name="toastGenero">" Genero: "</string>
    <string name="toastFacultad">" Facultad: "</string>
    <string name="mensajeNum">El numero de cuenta debe tener 10 digitos</string>
    <string name="mensajeNom">Nombre invalido</string>
    <string name="mensajeApell">Apellido Invalido</string>
    <string name="mensajeCorreo">Correo Invalido</string>
</resources>
